# graphics_angel

./: .gitignore  CMakeLists.txt  README
APPENDIX_A_EXAMPLES/: CMakeLists.txt
CHAPTER02_CODE/GENERAL_VERSIONS/: example2.1.cpp  example2.2.cpp  example2.3.cpp  example2.4.cpp  example2.4b.cpp  example2.5.cpp
CHAPTER02_CODE/MAC_VERSIONS/: example2.1.cpp  example2.1.orig.cpp
CHAPTER02_CODE/WINDOWS_VERSIONS/: example2.1.cpp  example2.2.cpp  example2.3.cpp  example2.4b.cpp  example2.5.cpp  vshader23.glsl
CHAPTER03_CODE/GENERAL_VERSIONS/: example3.1.cpp  example3.2.cpp  example3.6.cpp
CHAPTER03_CODE/WINDOWS_VERSIONS/: CMakeLists.txt  example3.1.cpp  example3.2.cpp  example3.6.cpp
CHAPTER04_CODE/GENERAL_VERSIONS/: example4.3.cpp
CHAPTER04_CODE/WINDOWS_VERSIONS/: example4.1.cpp  example4.2.cpp  example4.3.cpp
CHAPTER05_CODE/GENERAL_VERSIONS/: example5.1.cpp  example5.2.cpp  example5.3.cpp
CHAPTER05_CODE/WINDOWS_VERSIONS/: example5.1.cpp  example5.2.cpp  example5.3.cpp  example5.6.cpp
CHAPTER07_CODE/GENERAL_VERSIONS/: example7.1.cpp  example7.2.cpp  example7.3.cpp
CHAPTER07_CODE/MAC_VERSIONS/: example7.2.cpp  fshader72.glsl
CHAPTER07_CODE/WINDOWS_VERSIONS/: example7.1.cpp  example7.2.cpp  example7.3.cpp
CHAPTER08_CODE/WINDOWS_VERSIONS/: example8.1.cpp  example8.2.cpp  example8.3.cpp
CHAPTER09_CODE/WINDOWS_VERSIONS/: example9.1.cpp
CHAPTER10_CODE/GENERAL_VERSIONS/: example10.4.cpp
CHAPTER10_CODE/WINDOWS_VERSIONS/: CMakeLists.txt  example10.1.cpp  example10.2.cpp
CMake/Modules/: FindGLEW.cmake  FindLOCAL_GLUT.cmake
Common/: InitShader.cpp
include/: glew32s.lib  glew32sd.lib
shaders/MAC_VERSIONS/: fshader101.glsl  fshader102.glsl  fshader103.glsl  fshader104.glsl  fshader21.glsl  fshader22.glsl  fshader23.glsl  fshader24.glsl  fshader24b.glsl  fshader25.glsl  fshader31.glsl  fshader32.glsl  fshader36.glsl  fshader41.glsl  fshader42.glsl  fshader43.glsl  fshader51.glsl  fshader52.glsl  fshader53.glsl  fshader56.glsl  fshader71.glsl  fshader72.glsl  fshader73.glsl  fshader81.glsl  fshader82.glsl  fshader83.glsl  fshader91.glsl  fshader92.glsl  fshader_a10.glsl  fshader_a2.glsl  fshader_a3.glsl  fshader_a4.glsl  fshader_a5.glsl  fshader_a6.glsl  fshader_a7.glsl  fshader_a8.glsl  fshader_a9.glsl  ftrack.glsl  vshader101.glsl  vshader102.glsl  (+36 more)
shaders/WINDOWS_VERSIONS/: fshader101.glsl  fshader102.glsl  fshader104.glsl  fshader21.glsl  fshader22.glsl  fshader23.glsl  fshader24.glsl  fshader24b.glsl  fshader25.glsl  fshader31.glsl  fshader32.glsl  fshader36.glsl  fshader41.glsl  fshader42.glsl  fshader51.glsl  fshader52.glsl  fshader53.glsl  fshader56.glsl  fshader71.glsl  fshader72.glsl  fshader73.glsl  fshader81.glsl  fshader82.glsl  fshader83.glsl  fshader91.glsl  fshader92.glsl  fshader_a10.glsl  fshader_a2.glsl  fshader_a3.glsl  fshader_a4.glsl  fshader_a5.glsl  fshader_a6.glsl  fshader_a7.glsl  fshader_a8.glsl  fshader_a9.glsl  vshader101.glsl  vshader102.glsl  vshader104.glsl  vshader21.glsl  vshader22.glsl  (+30 more)
